2009-03-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h: use Nikon Get Vendor Extension Codes
	  call instead of fixed lists. Removed static lists.

	* library.c: In wait_event, handle Nikon cameras with Check Event
	  to also allow tethered capture via SDRAM. (cut and paste code needs
	  to be cleaned up sometime).

	* library.c: Nikon LiveView support for --capture-preview.
	* library.c: Nikon DSLR: AutoFocus Drive (always possible)
	  and Manual Focus Drive (only during LiveView) added.

	* library.c: If a MTP device has vendor name Canon or Nikon, mark it as Nikon
	  or Canon.

	* library.c: Canon capture: Automatically fallback to SDRAM if
	  no CF/SD Card inserted.
	* library.c: Canon EOS Capture: download all images on tethered capture.

	* config.c: longer timeout for Canon ViewFinder On command
	* config.c: some more error reporting on the table driven config engine
	* config.c: some new values added

	* music-players.h, device-flags.h: imported from latest libmtp.

	* library.c: Added:
		Nikon CoolPix P50, S60
		Canon Digital IXUS 85
		Canon PowerShot A740, G10, 
		Canon EOS 5D Mark II
	

2009-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Adjusted flags for Canon Powershots to match capture
	  abilities on the SDK page.
	* config.c: Do not list WiFi stuff on non-WiFi Nikons in config.
	* library.c: Added Nikon D200 property set.

2009-01-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Fixed stupid bug in "canon capture to card" mode.

	* ptp.c,ptp.h,config.c:  PTP Nikon AfDrive (Nikon DSLR). (not doing much)

	* ptp.c, config.c: Various additions of missing config values.

2009-01-15  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Enable viewfinder in enable capture for Powershots,
	  so we can just --set-config capture=1 --set-config output=0
	  or so.

	* library.c: Added Nikon D90 and its hidden properties.

2009-01-08  Marcus Meissner  <marcus@jet.franken.de>
